welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: ';' expected but 'return' found.
  	de1 = de1 + 1                                           return (de1 + die2)}
                                                                ^withoutDoubles:10: error: ';' expected but 'return' found.
    de1bis = 1                                             return de1 + die2}
                                                           ^